--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 
     function testDonationCompleted() {
         console.log('Simulating donation completed');
-        sendGAEvent('purchase', {
+        sendGAEvent('donation', {
             'currency': 'USD',
             'transaction_id': 'test123',
             'value': 700
