--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <a href="#XJKDHSTQ" style="display: none" id="donation-button"></a>
 	
 <script>
+    (function() {
+        const originalFetch = window.fetch;
+        window.fetch = function() {
+            const [resource, config] = arguments;
+            if (resource.includes('api.fundraiseup.com/checkout/resolve')) {
+                const url = new URL(resource);
+                url.searchParams.set('livemode', 'false');
+                arguments[0] = url.toString();
+            }
+            return originalFetch.apply(this, arguments);
+        };
+    })();
+</script>
+
+<script>
     // Function to send event to Google Analytics with a delay
     function sendGAEvent(eventName, eventParams) {
         console.log('Queuing GA event:', eventName, eventParams);
