--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
             'event_category': 'Donation',
             'event_label': 'Checkout Opened (Test)'
         });
+        console.log('GA event for open checkout sent')
     }
 
     function testDonationCompleted() {
