--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@ for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
 <a href="#XJKDHSTQ" style="display: none" id="donation-button"></a>
 	
 <script>
+
+    window.fundraiseup_livemode = false;
+    
+</script>
+
+
+<script>
     (function() {
         const originalFetch = window.fetch;
         window.fetch = function() {
